--- a/FinalProject2/Base.lproj/Main.storyboard
+++ b/FinalProject2/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1217" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="dGQ-e3-m7K">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="bKD-uE-ISb">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -34,7 +34,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="76"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="umh-to-iG8" id="eSX-5v-OhL">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="75"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="75.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -79,16 +79,18 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kcR-AK-hpA">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kcR-AK-hpA" customClass="SliderMenuView" customModule="FinalProject2" customModuleProvider="target">
                                 <rect key="frame" x="-270" y="0.0" width="265" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="265" id="t7J-H6-tlR"/>
                                 </constraints>
                             </view>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="rDS-tJ-tq8">
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="rDS-tJ-tq8">
                                 <rect key="frame" x="16" y="64" width="343" height="29"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="343" id="a26-a3-2TC"/>
+                                </constraints>
                                 <segments>
                                     <segment title="Hosted"/>
                                     <segment title="Joined"/>
@@ -100,8 +102,11 @@
                         <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="eQJ-mF-z41" firstAttribute="top" secondItem="DDz-0q-L1o" secondAttribute="bottom" id="1a8-ba-oUZ"/>
+                            <constraint firstItem="rDS-tJ-tq8" firstAttribute="top" secondItem="u8j-CW-PCZ" secondAttribute="bottom" id="5zB-wO-HY1"/>
                             <constraint firstItem="6R9-I0-Dc0" firstAttribute="top" secondItem="NKB-YS-Hxc" secondAttribute="top" constant="106" id="6au-ev-Opg"/>
+                            <constraint firstItem="6R9-I0-Dc0" firstAttribute="top" secondItem="rDS-tJ-tq8" secondAttribute="bottom" constant="14" id="7uG-A6-n0C"/>
                             <constraint firstItem="DDz-0q-L1o" firstAttribute="top" secondItem="6R9-I0-Dc0" secondAttribute="bottom" id="EWd-qt-cm2"/>
+                            <constraint firstItem="rDS-tJ-tq8" firstAttribute="leading" secondItem="kcR-AK-hpA" secondAttribute="trailing" constant="21" id="FH5-gX-VMH"/>
                             <constraint firstItem="eQJ-mF-z41" firstAttribute="top" secondItem="kcR-AK-hpA" secondAttribute="bottom" id="FHq-6Y-0QC"/>
                             <constraint firstItem="6R9-I0-Dc0" firstAttribute="leading" secondItem="NKB-YS-Hxc" secondAttribute="leading" id="Fhy-EE-aOq"/>
                             <constraint firstItem="DDz-0q-L1o" firstAttribute="leading" secondItem="kcR-AK-hpA" secondAttribute="trailing" constant="5" id="JmT-L5-kHM"/>
@@ -165,7 +170,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="87"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="qiZ-NP-syx" id="OGB-qT-Si8">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="86"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="86.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -189,7 +194,7 @@
                                     <navigationItem id="RLs-ab-7IF">
                                         <nil key="title"/>
                                         <segmentedControl key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" id="koW-Aw-HHH">
-                                            <rect key="frame" x="49" y="28" width="278" height="29"/>
+                                            <rect key="frame" x="48.5" y="27.5" width="278" height="29"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <segments>
                                                 <segment title="Category1"/>
