--- a/FinalProject2/Base.lproj/Main.storyboard
+++ b/FinalProject2/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1217" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="dGQ-e3-m7K">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="dGQ-e3-m7K">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -26,6 +26,22 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kcR-AK-hpA" customClass="SliderMenuView" customModule="FinalProject2" customModuleProvider="target">
+                                <rect key="frame" x="-270" y="0.0" width="265" height="667"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H1A-Z6-b7p">
+                                        <rect key="frame" x="0.0" y="0.0" width="265" height="202"/>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="H1A-Z6-b7p" secondAttribute="trailing" id="0FT-7A-KcB"/>
+                                    <constraint firstItem="H1A-Z6-b7p" firstAttribute="top" secondItem="kcR-AK-hpA" secondAttribute="top" id="B6I-uq-HvE"/>
+                                    <constraint firstItem="H1A-Z6-b7p" firstAttribute="leading" secondItem="kcR-AK-hpA" secondAttribute="leading" id="DF9-OY-tOn"/>
+                                    <constraint firstAttribute="bottom" secondItem="H1A-Z6-b7p" secondAttribute="bottom" constant="465" id="NrQ-X1-TsW"/>
+                                    <constraint firstAttribute="width" constant="265" id="t7J-H6-tlR"/>
+                                </constraints>
+                            </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="76" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6R9-I0-Dc0">
                                 <rect key="frame" x="0.0" y="106" width="375" height="511"/>
                                 <color key="backgroundColor" white="0.1026111577" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -34,7 +50,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="76"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="umh-to-iG8" id="eSX-5v-OhL">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="75"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="75.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -79,16 +95,11 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kcR-AK-hpA">
-                                <rect key="frame" x="-270" y="0.0" width="265" height="667"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="265" id="t7J-H6-tlR"/>
-                                </constraints>
-                            </view>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="rDS-tJ-tq8">
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="rDS-tJ-tq8">
                                 <rect key="frame" x="16" y="64" width="343" height="29"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="343" id="AEq-vT-ccm"/>
+                                </constraints>
                                 <segments>
                                     <segment title="Hosted"/>
                                     <segment title="Joined"/>
@@ -100,12 +111,15 @@
                         <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="eQJ-mF-z41" firstAttribute="top" secondItem="DDz-0q-L1o" secondAttribute="bottom" id="1a8-ba-oUZ"/>
+                            <constraint firstItem="rDS-tJ-tq8" firstAttribute="leading" secondItem="kcR-AK-hpA" secondAttribute="trailing" constant="21" id="62j-So-9OX"/>
                             <constraint firstItem="6R9-I0-Dc0" firstAttribute="top" secondItem="NKB-YS-Hxc" secondAttribute="top" constant="106" id="6au-ev-Opg"/>
+                            <constraint firstItem="6R9-I0-Dc0" firstAttribute="top" secondItem="rDS-tJ-tq8" secondAttribute="bottom" constant="14" id="9Eh-gS-Sv5"/>
                             <constraint firstItem="DDz-0q-L1o" firstAttribute="top" secondItem="6R9-I0-Dc0" secondAttribute="bottom" id="EWd-qt-cm2"/>
                             <constraint firstItem="eQJ-mF-z41" firstAttribute="top" secondItem="kcR-AK-hpA" secondAttribute="bottom" id="FHq-6Y-0QC"/>
                             <constraint firstItem="6R9-I0-Dc0" firstAttribute="leading" secondItem="NKB-YS-Hxc" secondAttribute="leading" id="Fhy-EE-aOq"/>
                             <constraint firstItem="DDz-0q-L1o" firstAttribute="leading" secondItem="kcR-AK-hpA" secondAttribute="trailing" constant="5" id="JmT-L5-kHM"/>
                             <constraint firstItem="u8j-CW-PCZ" firstAttribute="top" secondItem="APm-8S-CB0" secondAttribute="bottom" constant="-20" id="Vtn-PI-ZJ2"/>
+                            <constraint firstItem="rDS-tJ-tq8" firstAttribute="top" secondItem="u8j-CW-PCZ" secondAttribute="bottom" id="apo-Ng-svn"/>
                             <constraint firstItem="ds1-Ee-JM6" firstAttribute="top" secondItem="6R9-I0-Dc0" secondAttribute="bottom" id="crB-i9-0q4"/>
                             <constraint firstItem="6R9-I0-Dc0" firstAttribute="top" secondItem="u8j-CW-PCZ" secondAttribute="bottom" constant="42" id="hLR-Ez-4bl"/>
                             <constraint firstItem="kcR-AK-hpA" firstAttribute="top" secondItem="NKB-YS-Hxc" secondAttribute="top" id="iEs-pE-3X3"/>
@@ -132,6 +146,7 @@
                         <outlet property="menuViewLeadingSpaceConstraint" destination="jK5-N0-wd9" id="yPg-WR-PXu"/>
                         <outlet property="myEventsBarButton" destination="DDz-0q-L1o" id="S7Q-vB-3jS"/>
                         <outlet property="navBar" destination="u8j-CW-PCZ" id="Kh6-Jf-irf"/>
+                        <outlet property="profileMenu" destination="H1A-Z6-b7p" id="iFZ-ci-3qV"/>
                         <outlet property="tableView" destination="6R9-I0-Dc0" id="bbF-SB-MLD"/>
                     </connections>
                 </viewController>
@@ -165,7 +180,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="87"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="qiZ-NP-syx" id="OGB-qT-Si8">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="86"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="86.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -189,7 +204,7 @@
                                     <navigationItem id="RLs-ab-7IF">
                                         <nil key="title"/>
                                         <segmentedControl key="titleView" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" id="koW-Aw-HHH">
-                                            <rect key="frame" x="8" y="28" width="359" height="29"/>
+                                            <rect key="frame" x="8" y="27.5" width="359" height="29"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <segments>
                                                 <segment title="Category1"/>
@@ -292,7 +307,7 @@
         <!--Add Event View Controller-->
         <scene sceneID="OKF-Mx-pJd">
             <objects>
-                <viewController storyboardIdentifier="AddEventViewController" modalTransitionStyle="crossDissolve" modalPresentationStyle="overCurrentContext" useStoryboardIdentifierAsRestorationIdentifier="YES" id="j7Y-4d-ha8" customClass="AddEventViewController" customModule="FinalProject2" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="AddEventViewController" modalTransitionStyle="flipHorizontal" modalPresentationStyle="overCurrentContext" useStoryboardIdentifierAsRestorationIdentifier="YES" id="j7Y-4d-ha8" customClass="AddEventViewController" customModule="FinalProject2" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="eM0-lV-7Ua"/>
                         <viewControllerLayoutGuide type="bottom" id="Hi5-dN-Pdu"/>
@@ -465,10 +480,10 @@
             </objects>
             <point key="canvasLocation" x="1152.8" y="138.98050974512745"/>
         </scene>
-        <!--Main View Controller-->
+        <!--Add Category View Controller-->
         <scene sceneID="7Ry-q1-lWt">
             <objects>
-                <viewController storyboardIdentifier="MainViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="bKD-uE-ISb" customClass="MainViewController" customModule="FinalProject2" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="AddCategoryViewController" modalTransitionStyle="crossDissolve" useStoryboardIdentifierAsRestorationIdentifier="YES" id="bKD-uE-ISb" customClass="AddCategoryViewController" customModule="FinalProject2" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Z3R-ci-YiE"/>
                         <viewControllerLayoutGuide type="bottom" id="OG3-XR-iv5"/>
@@ -477,8 +492,24 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="reW-bS-gC0">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="65"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="375" id="YPd-FC-Zef"/>
+                                    <constraint firstAttribute="height" constant="65" id="anj-ke-77F"/>
+                                </constraints>
+                                <items>
+                                    <navigationItem title="Choose Category" id="R3O-Wk-lPn">
+                                        <barButtonItem key="leftBarButtonItem" systemItem="stop" id="Cbn-Gv-qBA">
+                                            <connections>
+                                                <action selector="backButtonTapped:" destination="bKD-uE-ISb" id="C7j-aD-52L"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Gwv-zN-kMz">
-                                <rect key="frame" x="0.0" y="20" width="375" height="595"/>
+                                <rect key="frame" x="0.0" y="65" width="375" height="581"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.1026111577" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="vmh-vs-ibF">
@@ -514,21 +545,16 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
-                            <button opaque="NO" alpha="0.0" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="efG-hY-BHS">
-                                <rect key="frame" x="0.0" y="611" width="375" height="56"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.87058823529999996" green="0.20784313730000001" blue="0.29411764709999999" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" name="CircularStd-Bold" family="Circular Std" pointSize="20"/>
-                                <state key="normal" title="Done">
-                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                            </button>
                         </subviews>
-                        <color key="backgroundColor" white="0.5" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.29599208047945208" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="reW-bS-gC0" firstAttribute="top" secondItem="Z3R-ci-YiE" secondAttribute="bottom" constant="-20" id="7j1-mQ-aWe"/>
+                            <constraint firstItem="reW-bS-gC0" firstAttribute="leading" secondItem="Ny0-co-oTB" secondAttribute="leading" id="T5Z-dj-Yn9"/>
+                            <constraint firstAttribute="trailing" secondItem="reW-bS-gC0" secondAttribute="trailing" id="ZQ2-EZ-EGS"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="collectionView" destination="Gwv-zN-kMz" id="3FK-ex-6ez"/>
-                        <outlet property="doneButton" destination="efG-hY-BHS" id="9sQ-Sc-5SY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="n4A-4B-dvX" userLabel="First Responder" sceneMemberID="firstResponder"/>
