--- a/FinalProject2/Base.lproj/Main.storyboard
+++ b/FinalProject2/Base.lproj/Main.storyboard
@@ -366,6 +366,7 @@
                     </view>
                     <connections>
                         <outlet property="aboutTextView" destination="yDj-oP-gWx" id="FI7-Xe-2bJ"/>
+                        <outlet property="addEventButton" destination="p6e-tr-9NA" id="2Ka-MX-9uI"/>
                         <outlet property="datePicker" destination="9Cm-fb-xzB" id="NPQ-WN-6cU"/>
                         <outlet property="displayView" destination="zsh-Cq-0g1" id="4II-wR-ij4"/>
                         <outlet property="eventName" destination="k96-Ty-HrH" id="gLS-yY-3ku"/>
